# claude-workbench

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/pm/: roadmap.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-26-layout-redesign.md  2026-04-28-phase0-ci-baseline.md  2026-04-28-phase1-worktree-isolation.md  2026-04-28-phase2-permission-model.md  2026-04-28-phase3-security-hardening.md  (+4 more)
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  fs.rs  lib.rs  main.rs  pty.rs  term.rs  tokens.rs
src/__tests__/: CommitModal.test.tsx  PermissionModal.test.tsx  session-restore.test.ts  utils.test.ts
src/components/: AutomationsPage.tsx  CodeViewer.tsx  CommitModal.tsx  ConfirmModal.tsx  Conversation.tsx  DebugMenu.tsx  FileChangesPanel.tsx  FileTree.tsx  FilesTab.tsx  IntegratedTerminal.tsx  Layout.tsx  Onboarding.tsx  OnboardingModal.tsx  Pages.tsx  PermissionBanner.tsx  PermissionModal.tsx  PluginsPage.tsx  Resizer.tsx  ReviewPanel.tsx  SessionRail.tsx  SessionSettingsModal.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TemplateModal.tsx  Terminal.tsx  TerminalPanel.tsx  TitleBar.tsx  TokenDashboard.tsx  UpdateBanner.tsx  UsageFooter.tsx  WorkspaceSelector.tsx
src/data/: sample.ts
src/hooks/: useShortcuts.ts
src/lib/: appearance.ts  notifications.ts  session.ts  tauri.ts  types.ts  utils.ts
src/stores/: sessionStore.ts  templateStore.ts  tokenStore.ts  updaterStore.ts  workspaceStore.ts
src/types/: agent-events.ts  permissions.ts
(+2 files in other folders)
