[package]
name = "claude-window"
version = "0.1.0"
description = "Claude Code Agent Session Manager"
authors = ["sam"]
edition = "2021"

[lib]
name = "claude_window_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
notify = { version = "7", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
